kube/rabbitmq/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-headless
spec:
  clusterIP: None
  ports:
    - name: epmd
      port: 4369
      protocol: TCP
      targetPort: 4369
    - name: cluster-rpc
      port: 25672
      protocol: TCP
      targetPort: 25672
  selector:
    app: rabbitmq
  type: ClusterIP
  sessionAffinity: None
---
kind: Service
apiVersion: v1
metadata:
  namespace: broker
  name: rabbitmq-client
  labels:
    app: rabbitmq
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 15672
    - name: stomp
      protocol: TCP
      port: 15674
    - name: prometheus
      protocol: TCP
      port: 15692
    - name: amqp
      protocol: TCP
      port: 5672
  selector:
    app: rabbitmq
